--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "colors": "^1.4.0",
     "dotenv": "^8.0.0",
-    "inquirer": "^6.3.1",
-    "nodemon": "^2.0.4"
+    "inquirer": "^6.3.1"
   }
 }
